--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
-body {background-color:tan;}
-h1{color:green;}
-
-
+body {
+  background-color: black;
+}
+h1 {
+  color: green;
+}
+.container {
+  background-color: #fff;
+  border-radius: 20px;
+}
+.flex {
+  display: flex;
+}
+.justify-center {
+  justify-content: center;
+}
+.m-left-input {
+  margin-left: 20px;
+}
